<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>h1_isaac_controller</name>
  <version>0.0.1</version>
  <description>MYBOTSHOP GmbH Isaac Controller Package</description>
  <maintainer email="support@mybotshop.de">Salman Omar Sohail</maintainer>
  <license>Proprietary</license>
  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>ament_cmake_python</buildtool_depend>
  <depend>interactive_marker_twist_server</depend>
  <depend>joint_state_broadcaster</depend>
  <depend>joy</depend>
  <depend>robot_localization</depend>
  <depend>robot_state_publisher</depend>
  <depend>teleop_twist_joy</depend>
  <depend>rclcpp</depend>
  <depend>rclpy</depend>
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>
  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>